--- a/MudGame.vcxproj.filters
+++ b/MudGame.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="engine\UVector.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="UMessageManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
