--- a/MudGame.vcxproj.filters
+++ b/MudGame.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="MudGame.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="UMessageManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\UActorObject.h">
