--- a/MudGame.vcxproj.filters
+++ b/MudGame.vcxproj.filters
@@ -18,7 +18,10 @@
     <ClCompile Include="MudGame.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="UMessageManager.cpp">
+    <ClCompile Include="UActorObject.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Utility.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -39,6 +42,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="UMessageManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
