--- a/MudGame.vcxproj
+++ b/MudGame.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Component\UStoryComponent.h" />
     <ClInclude Include="Component\UDeliveryComponent.h" />
     <ClInclude Include="Component\UTalkComponent.h" />
     <ClInclude Include="Component\UMeshComponent.h" />
@@ -27,6 +28,7 @@
     <ClInclude Include="Component\UMovementComponent.h" />
     <ClInclude Include="Csv\Csv.h" />
     <ClInclude Include="Csv\QuestCsv.h" />
+    <ClInclude Include="Csv\RoleCsv.h" />
     <ClInclude Include="Engine\Const.h" />
     <ClInclude Include="Engine\Delegate.h" />
     <ClInclude Include="Engine\UActorObject.h" />
@@ -41,6 +43,7 @@
     <ClInclude Include="Role\NPC.h" />
     <ClInclude Include="Role\player.h" />
     <ClInclude Include="Role\role.h" />
+    <ClInclude Include="System\UCsvManager.h" />
     <ClInclude Include="System\UIManager.h" />
     <ClInclude Include="System\UMessageManager.h" />
     <ClInclude Include="System\UTalkManager.h" />
@@ -51,12 +54,14 @@
     <ClInclude Include="UWorld.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Component\UStoryComponent.cpp" />
     <ClCompile Include="Component\UDeliveryComponent.cpp" />
     <ClCompile Include="Component\UMeshComponent.cpp" />
     <ClCompile Include="Component\UMovementComponent.cpp" />
     <ClCompile Include="Component\UTalkComponent.cpp" />
     <ClCompile Include="Csv\Csv.cpp" />
     <ClCompile Include="Csv\QuestCsv.cpp" />
+    <ClCompile Include="Csv\RoleCsv.cpp" />
     <ClCompile Include="Engine\UActorObject.cpp" />
     <ClCompile Include="Engine\UComponent.cpp" />
     <ClCompile Include="Engine\UEventDispatcher.cpp" />
@@ -66,6 +71,7 @@
     <ClCompile Include="Engine\Utility.cpp" />
     <ClCompile Include="Engine\UVector.cpp" />
     <ClCompile Include="MudGame.cpp" />
+    <ClCompile Include="System\UCsvManager.cpp" />
     <ClCompile Include="System\UIManager.cpp" />
     <ClCompile Include="System\UMessageManager.cpp" />
     <ClCompile Include="System\UTalkManager.cpp" />
